@@ -1,5 +1,6 @@
 Changelog for HLint
 
+    #393, fix suggestion for import IO, requires more than System.IO
     #376, note that RecordWildCards implies DisambiguateRecordFields
 1.8.3
     Allow uniplate-1.6
